# M-todos-Num-ricos

./: AppRun  Makefile  README.md  Readme  bash.exe.stackdump  moc_dialog.cpp  moc_mainwindow.cpp  ui_dialog.h  ui_mainwindow.h
fontes/: CMakeLists.txt  Metodos_Part2.pro  ldp_solucao.cpp  ldp_solucao.h  lu_solucao.cpp  lu_solucao.h  matriz.cpp  matriz.h  operacoes.cpp  operacoes.h
